2019-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/utils.cc (MemoryResource): Lessen the memory limit used
	for oss-fuzz testing in order to provide more headroom and margin
	for error.

	* magick/render.c (TraceBezier): Detect arithmetic overflow and
	return errors via normal error path rather than exiting.  Fixes
	oss-fuzz 16450 "graphicsmagick:coder_MVG_fuzzer: Unexpected-exit
	in DefaultFatalErrorHandler".
	(PrimitiveInfoRealloc): Implement more paranoid code related to
	primitive allocation.

2019-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawStrokePolygon): Handle case where
	TraceStrokePolygon() returns NULL.  Addresses oss-fuzz 15516
	"graphicsmagick/coder_MVG_fuzzer: ASSERT: primitive_info !=
	(PrimitiveInfo *) NULL".
	(DrawDashPolygon): Handle case where DrawStrokePolygon() returns
	MagickFail. Also needed to address oss-fuzz 15516, since otherwise
	test-cases run for a very long time.
	(ExtractTokensBetweenPushPop): Fix non-terminal parsing loop.
	Addresses oss-fuzz 15318 "graphicsmagick/coder_MVG_fuzzer: Timeout
	in graphicsmagick_coder_MVG_fuzzer".

2019-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.h (MagickMallocAlignedArray): Add function
	attributes for added value and to quench GCC 9 warning with
	special build options enabled.

	* magick/deprecate.h (AcquireMemory): Add more function attributes
	to quench GCC 9 warning with special build options enabled.

	* magick/attribute.c (GenerateEXIFAttribute): Fix compilation
	warning in 32-bit build.

	* coders/dpx.c (AttributeToString): Eliminate annoying warnings
	from GCC 9, although the code was correct.

	* coders/msl.c (MSLStartElement): Fix defective opacity percentage
	code revealed by GCC 9 warning.

2019-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Skip coalescing layers if there is
	only one layer.  Fixes oss-fuzz 16274