@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190817"
-#define public MagickPackageReleaseDate "snapshot-20190817"
+#define public MagickPackageVersionAddendum ".020190822"
+#define public MagickPackageReleaseDate "snapshot-20190822"
